--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -37,7 +37,7 @@
           {
             "uris": [
               {
-                "scheme": "Audiobookshelf"
+                "scheme": "Harmshelf"
               }
             ]
           }
