--- a/AppScope/app.json5
+++ b/AppScope/app.json5
@@ -1,6 +1,6 @@
 {
   "app": {
-    "bundleName": "com.audiobookshelf.shanyan",
+    "bundleName": "com.shanyan.harmshelf",
     "vendor": "shanyan",
     "versionCode": 1000000,
     "versionName": "1.1.0",
