--- a/entry/src/ohosTest/module.json5
+++ b/entry/src/ohosTest/module.json5
@@ -5,7 +5,8 @@
     "deviceTypes": [
       "phone",
       "tablet",
-      "2in1"
+      "2in1",
+      "car"
     ],
     "deliveryWithInstall": true,
     "installationFree": false
