--- a/oh-package.json5
+++ b/oh-package.json5
@@ -1,12 +1,14 @@
 {
+  "modelVersion": "5.0.5",
+  "description": "Please describe the basic information.",
+  "dependencies": {
+    "@ohos/axios": "^2.2.6",
+    "@wuyan/html_parse": "^1.0.7",
+    "@ibestservices/ucharts": "^1.0.9"
+  },
   "devDependencies": {
-    "@ohos/hypium": "1.0.18",
+    "@ohos/hypium": "1.0.21",
     "@ohos/hamock": "1.0.0"
   },
-  "modelVersion": "5.0.0",
-  "description": "Please describe the basic information.",
-  "dynamicDependencies": {},
-  "dependencies": {
-    "@ohos/axios": "^2.2.2"
-  }
+  "dynamicDependencies": {}
 }
